welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: ':' expected but ')' found.
		def marque(c){
                            ^MethodsPicture:28: error: identifier expected but '}' found.
	}
        ^